--- a/CP/Info.plist
+++ b/CP/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSRemindersUsageDescription</key>
+	<string>This app will set reminders for you if you allow it</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>This app needs access to your callendar to track carpools for you</string>
 	<key>CFBundleDevelopmentRegion</key>
